--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://insights-challenge_express-server_1:8080/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
