--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recharts": "^1.8.5",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://127.0.0.1:8080/",
