--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.1",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
+    "socket.io-client": "^3.0.3",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://127.0.0.1:8080/",
