--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.18",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
