--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^7.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.18",
-    "puppeteer": "^5.5.0",
-    "socket.io": "^3.0.3"
+    "puppeteer": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
