--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.1'
 
 services:
   react-app:
+    container_name: client
     build: 
       context: ./client
       dockerfile: Dockerfile.client
@@ -12,23 +13,29 @@ services:
      - "3000:3000"
     depends_on:
       - express-server
+    volumes:
+      - '/usr/app/client/node_modules'
+      - ./client:/usr/app/client
+    environment:
+      - "TZ=Israel" 
 
   proxy:
+    container_name: proxy 
     image: dperson/torproxy
   
-  # elasticsearch:
-  #   image: elasticsearch
-  #   ports: 
-  #     - "9200:9200"
 
   express-server:
+    container_name: server 
     build: 
       context: ./server
       dockerfile: Dockerfile.server
     ports:
       - "8080:8080"
-    depends_on:
-      - proxy
+    volumes:
+      - '/usr/app/server/node_modules'
+      - ./server:/usr/app/server"
+    environment:
+      - "TZ=Israel" 
 
 
 networks:
