with python version and presentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\galDev\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Users\\galDev\\Desktop\\cyber4s\\GitHubProject\\insights-challenge\\python-scraper\\work_env\\Scripts\\python"
 }
