--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://127.0.0.1:8080/",
+  "proxy": "http://server:8080/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
